[package]
name = "box-rust-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^3.0"
serde_json = "^1.0"

tokio = { version = "1.28.2", features = ["full"] }
reqwest = { version = "0.11.18", features = ["stream"]}

